--- a/task/golang-build/0.1/tests/run.yaml
+++ b/task/golang-build/0.1/tests/run.yaml
@@ -15,7 +15,7 @@ spec:
           workspace: shared-workspace
       params:
         - name: url
-          value: https://github.com/tektoncd/pipeline
+          value: https://github.com/tektoncd/plumbing
         - name: subdirectory
           value: ""
         - name: deleteExisting
@@ -30,7 +30,7 @@ spec:
           workspace: shared-workspace
       params:
         - name: package
-          value: github.com/tektoncd/pipeline
+          value: github.com/tektoncd/plumbing
 
 ---
 apiVersion: tekton.dev/v1beta1
