Add an optional dockerconfig workspace for kind
The kind binary uses docker.io images which can gets rate limited
quickly rate limited in some environments.

Add an optional dockerconfig to the kind task.

The PipelineRun can then mount it and pass it back to the script to run
to mount that config.json

Signed-off-by: Chmouel Boudjnah <chmouel@redhat.com>

--- a/task/kind/0.1/kind.yaml
+++ b/task/kind/0.1/kind.yaml
@@ -36,6 +36,8 @@ spec:
       description: Task runtime image. Should typically contain the kind CLI (https://kind.sigs.k8s.io)
   workspaces:
     - name: source
+    - name: dockerconfig
+      optional: true
   steps:
     - image: $(params.image)
       workingDir: $(workspaces.source.path)
